removed dark mode + fixed min height of main element

--- a/_static/sass/base/_main.scss
+++ b/_static/sass/base/_main.scss
@@ -32,7 +32,7 @@ body {
 
 // sticky footer styles
 .main {
-  min-height: 100%;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
