--- a/_static/sass/utilities/_colors.scss
+++ b/_static/sass/utilities/_colors.scss
@@ -22,29 +22,30 @@ $c-offwhite: lighten($c-text, 10);
   --theme-color-border: #2a7af7;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background-color: #222;
-    --white-color: #bbb;
-    --heading-text-color: #eee;
-    --main-theme-color: #4C92FF;
-    --main-text-color: #ccc;
-    --nav-color: #1a1a1a;
-    --nav-about: #2f2f2f;
-    --nav-border: #111;
-    --lighter-gray-color: #444;
-    --secondary-text-color: #bbb;
-    --highlight-color: #888;
-    --off-white: #111;
-    --theme-color-border: #444;
-  }
 
-  img, video {
-    opacity: .7;
-    filter: grayscale(1);
-    mix-blend-mode: screen;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   :root {
+//     --background-color: #222;
+//     --white-color: #bbb;
+//     --heading-text-color: #eee;
+//     --main-theme-color: #4C92FF;
+//     --main-text-color: #ccc;
+//     --nav-color: #1a1a1a;
+//     --nav-about: #2f2f2f;
+//     --nav-border: #111;
+//     --lighter-gray-color: #444;
+//     --secondary-text-color: #bbb;
+//     --highlight-color: #888;
+//     --off-white: #111;
+//     --theme-color-border: #444;
+//   }
+//
+//   img, video {
+//     opacity: .7;
+//     filter: grayscale(1);
+//     mix-blend-mode: screen;
+//   }
+// }
 
 .c-grey {
 	color: var(--secondary-text-color);
